[tool.poetry]
name = "genopro-tools"
version = "0.1.0"
description = ""
authors = ["George Macon <george.macon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
lxml = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
